updates for discord ecryption